# ebcore

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
ebcore.xcodeproj/: project.pbxproj
src/: appendix.c  bitmap.c  book.c  booklist.c  build-post.h  build-pre.h  config.h  defs.h  eb.c  eb.h  error.c  filename.c  font.c  strcasecmp.c  sysdefs.h  zio.c  zio.h
tests/: CMakeLists.txt  main.c  test_disctype.c  test_fixture.c  test_font.c  test_helpers.h  test_hooks.c  test_hooks.h  test_platform.h  test_prefix.c  test_subbook.c  test_util.c  test_util.h  test_word.c
tests/data/gks2/: readme.htm
tests/data/gks2/16_ebs/: Gaiji.xml  GaijiMap.xml  _gaiji_.txt
tests/data/gks2/40_bmp/: license
tests/data/gks2/Epwing/: CATALOGS
tests/data/gks2/Epwing/gks2/GAIJI/: GAI16F00
tests/data/gks2/Kuten/: gks_kuten.htm
tests/unity/: unity_config.h
